--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,19 @@
 {
   "version": 2,
-  "functions": {
-    "api/**/*.ts": {
-      "runtime": "@vercel/node@18.x"
-    },
-    "api/**/*.js": {
-      "runtime": "@vercel/node@18.x"
-    }
-  },
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
-  "installCommand": "npm install",
-  "rewrites": [
+  "builds": [
     {
-      "source": "/api/(.*)",
-      "destination": "/api/$1"
+      "src": "api/**/*.ts",
+      "use": "@vercel/node@3.0.0"
+    },
+    {
+      "src": "api/**/*.js", 
+      "use": "@vercel/node@3.0.0"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
     }
   ],
   "headers": [
@@ -26,7 +25,7 @@
           "value": "*"
         },
         {
-          "key": "Access-Control-Allow-Methods",
+          "key": "Access-Control-Allow-Methods", 
           "value": "GET, POST, PUT, DELETE, PATCH, OPTIONS"
         },
         {
