--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "functions": {
-    "api/*.ts": {
-      "runtime": "@vercel/node@20.x"
+    "api/**/*.ts": {
+      "runtime": "@vercel/node@18.17.0"
     }
   }
 } 
