--- a/package.json
+++ b/package.json
@@ -15,32 +15,33 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
-    "openai": "^4.24.0",
-    "cors": "^2.8.5",
-    "joi": "^17.11.0",
+    "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "uuid": "^9.0.1",
-    "nodemailer": "^6.9.7",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "dotenv": "^16.3.1"
+    "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.7",
+    "openai": "^4.24.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/node": "^20.10.0",
-    "@types/cors": "^2.8.17",
     "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/uuid": "^9.0.7",
-    "@types/nodemailer": "^6.4.14",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "typescript": "^5.3.0",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.10.0",
+    "@types/nodemailer": "^6.4.14",
+    "@types/uuid": "^9.0.7",
+    "@vercel/node": "^3.0.0",
+    "nodemon": "^3.0.2",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "nodemon": "^3.0.2",
-    "@vercel/node": "^3.0.0"
+    "typescript": "^5.3.0"
   },
   "engines": {
     "node": ">=18.0.0"
   }
-} 
+}
