--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"No tests specified\" && exit 0"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.63.0",
     "@supabase/supabase-js": "^2.39.0",
     "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
